fix(dialog): adjust top positioning for better alignment

--- a/src/index.css
+++ b/src/index.css
@@ -69,12 +69,13 @@ td a {
 
 /* media item dialog */
 dialog {
-  top: 0%;
+  top: 0;
   height: 90%;
   background: rgba(0, 0, 0, 0.8);
   z-index: 9999;
   color: rgba(255, 255, 255, 0.87);
 }
+
 dialog button {
   display: block;
 }
